syntax = "proto3";

package ocf.cloud.resourceaggregate.cqrs.aggregate.test.v2;

option go_package = "github.com/plgd-dev/hub/v2/resource-aggregate/cqrs/aggregate/test;test";

message Publish {
    string device_id = 1;
    string href = 2;
}

message Unpublish {
    string device_id = 1;
    string href = 2;
}

message Published {
    string device_id = 1;
    string href = 2;
    uint64 event_version = 3;
    int64 event_timestamp = 4;
}

message Unpublished {
    string device_id = 1;
    string href = 2;
    uint64 event_version = 3;
    int64 event_timestamp = 4;
}

message Snapshot {
    string device_id = 1;
    string href = 2;
    bool is_published = 3;
    uint64 event_version = 4;
    int64 event_timestamp = 5;
}